--- a/JinghuiTechnology/景汇科技网.html
+++ b/JinghuiTechnology/景汇科技网.html
@@ -44,7 +44,7 @@
             border-radius: 15px;
             overflow: hidden;
             box-shadow: 0 7px 30px -10px rgba(150,170,180,0.5);
-            transition: all 0.3s ease;
+            transition: all 0.3 ease;
             width: 22%;
             padding: 1.5em;
             text-align: center;
@@ -58,7 +58,7 @@
             height: 120px;
             object-fit: contain;
             margin-bottom: 15px;
-            transition: transform 0.3s ease;
+            transition: transform 0.3 ease;
         }
         .item:hover .icon {
             transform: scale(1.1);
@@ -81,7 +81,7 @@
             color: white;
             text-decoration: none;
             border-radius: 25px;
-            transition: all 0.3s ease;
+            transition: all 0.3 ease;
             font-weight: bold;
             font-size: 0.9em;
         }
@@ -134,7 +134,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2023 景汇科技 版权所有</p>
+        <p>&copy; 2024 景汇科技 版权所有</p>
     </footer>
 </body>
 </html>
